# mp3_encoder

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  clear_cmake_cache.sh  cmake_install.cmake  log.txt
lame/: CMakeLists.txt  lame.cmake
pthreads-win32/: pthreads-win32.cmake
src/: logger.cpp  logger.h  main.cpp  thread_handler.cpp  thread_handler.h  wav.cpp  wav.h
